# harness-engineering

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILLS.md  permission-reviewer.sh  pyproject.toml  settings.json  test_url2md.py  url2md.py  vibench-research-report.md
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: check-proof-report.mjs  check-proof-report.sh
.codex-plugin/: plugin.json
.codex/agents/: explore.toml  plan.toml  worker.toml
.harness/: README.md
.harness/knowledge/: INDEX.md
docs/plans/: 2026-03-23-web-page-to-markdown-design.md  2026-03-23-web-to-markdown-design.md
hooks/: coder-e2e-gate.mjs  coder-e2e-gate.sh  coder-e2e-gate.test.mjs  coder-e2e-gate.test.sh  context-map.test.mjs  hooks.json  session-start-context.mjs
hooks/_lib/: context-map.mjs  frontmatter.mjs  git.mjs  io.mjs  notify.mjs  paths.mjs
plugins/harness/: README.md
references/: codex-config.toml  codex-tools.md
scripts/: sync-codex-plugin-bundle.sh
skills/_shared/: fallow.md  knowledge.md  knowledge.mjs  knowledge.test.mjs
skills/brainstorm/: SKILL.md
skills/code-quality/: SKILL.md
skills/code-review/: SKILL.md
skills/constitution/: SKILL.md
skills/context-map/: SKILL.md
skills/coverage-guard/: SKILL.md
tests/: test_cli.py  test_converter.py  test_extractor.py  test_fetcher.py  test_renderer.py  test_tree_builder.py
web2md/: __main__.py  cli.py  converter.py  extractor.py  fetcher.py  nodes.py  renderer.py  tree_builder.py
workflows/: claude-review-fixer.yml
(+156 files in other folders)
