[project]
name = "url2md"
version = "0.1.0"
description = "Convert web pages to clean markdown files"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "readability-lxml>=0.8",
    "markdownify>=0.11",
    "lxml>=5.0",
]

[project.scripts]
url2md = "url2md:main"

[tool.pytest.ini_options]
testpaths = ["test_url2md.py"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
